<resources>

    <!-- Affichage -->
    <string name="logs">Logs</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="hour">Time</string>

    <!-- Affichage FR -->
    <string name="app_name_fr">LaPorte Alarme</string>
    <string name="home_title_fr">ALARME LA PORTE</string>
    <string name="home_alarme_on_fr">Alarme Activé</string>
    <string name="home_alarme_off_fr">Alarme Desactivé</string>
    <string name="profil_fr">Profil</string>
    <string name="home_hour_fr">12:00</string>
    <string name="home_date_fr">1er Janvier 2000</string>
    <string name="alarme_intru_fr">Intrusion!</string>
    <string name="alarme_dismiss_fr">Fermer</string>
    <string name="retour_fr">Retour</string>
    <string name="courrielLabel_fr">Courriel</string>
    <string name="nomLabel_fr">Nom</string>

    <!-- Affichage EN -->
    <string name="app_name_en">TheDoor Alarm</string>
    <string name="home_title_en">ALARM THE DOOR</string>
    <string name="home_alarme_on_en">Alarm Activated</string>
    <string name="home_alarme_off_en">Alarm Desactivated</string>
    <string name="profil_en">Profile</string>
    <string name="home_hour_en">12:00</string>
    <string name="home_date_en">1st January 2000</string>
    <string name="alarme_intru_en">Intrusion!</string>
    <string name="alarme_dismiss_en">Dismiss</string>
    <string name="back_en">Back</string>
    <string name="mailLabel_en">Mail</string>
    <string name="nameLabel_en">Name</string>

    <!-- Valeur d'affichage -->
    <string name="courrielEntry">thomasBaudry@cegep.ca</string>
    <string name="nomEntry">Thomas Baudry</string>

    <!-- URL API -->
    <string name="api_url">http://10.0.2.2:80/api_Alarme?action=</string>
    <string name="api_action_getListLogs">obtenirLesLogs</string>
    <string name="api_action_addLog">ajouterUnLog</string>

    <!-- INFO BROKER MQTT -->
    <string name="mqtt_url">tcp://172.16.5.202:1883</string>
    <string name="mqtt_client">pi</string>
    <string name="mqtt_topic">LaPorte/detection</string>
</resources>